# one_app_challenge

./: .gitignore  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db  cache.db-shm
doc/: 概要.md
src/: pyproject.toml
src/app/: app.py  functions.py  hand_tracking_module.py  logger.py  video_capture.py
src/back/: fast_gesture.py  functions.py  get_screenshot.py  hand_tracking_module.py  video_capture.py
src/base_line/: gesture.py
src/front/: screenshot.py
src/utils/: fast_gesture.py  gesture.py  get_screenshot.py  thread_and_queue.py
