[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hayata1996 <kk19960603hh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
